All_Component_DX/force-app/main/default/objects/Quote_Line__c/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <description>Discount (Amount or percentage) for the line</description>
    <inlineHelpText>Discount (Amount or percentage) for the line</inlineHelpText>
    <label>Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>