All_Component_DX/force-app/main/default/objects/Quote_Line__c/fields/Line_Price2__c.field-meta.xml
<CustomField>
    <fullName>Line_Price2__c</fullName>
    <description>Final line price after applying discount</description>
    <inlineHelpText>Final line price after applying discount</inlineHelpText>
    <label>Line Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>