All_Component_DX/force-app/main/default/objects/Quote_Line__c/fields/Quantity2__c.field-meta.xml
<CustomField>
    <fullName>Quantity2__c</fullName>
    <description>Number of units. This depends upon the line type</description>
    <inlineHelpText>Number of units. This depends upon the line type</inlineHelpText>
    <label>Qty</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>