All_Component_DX/force-app/main/default/objects/Quote_Line__c/fields/Service_Order_Line__c.field-meta.xml
<CustomField>
    <fullName>Service_Order_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Service Order estimates line record using which this quote line was created. Not displayed on the screen.</description>
    <inlineHelpText>Service Order estimates line record using which this quote line was created. Not displayed on the screen.</inlineHelpText>
    <label>Work Details</label>
    <referenceTo>Service_Order_Line__c</referenceTo>
    <relationshipLabel>Quote Items</relationshipLabel>
    <relationshipName>Quote_Line</relationshipName>
    <type>Lookup</type>
</CustomField>