All_Component_DX/force-app/main/default/objects/Quote_Line__c/fields/Unit_Price2__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price2__c</fullName>
    <description>Price per unit of the line. Product cost if it is a Parts line, hourly charges if it is labor and so on</description>
    <inlineHelpText>Price per unit of the line. Product cost if it is a Parts line, hourly charges if it is labor and so on</inlineHelpText>
    <label>Unit Price</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>